# mini-web-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: correlation_id.rs  main.rs  meter_layer.rs  observability.rs  panics.rs
src/json_logging/: fields.rs  format.rs  logstash.rs  mod.rs
