[package]
name = "mini-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
axum = { version = "0" }
anyhow = "1"
tower-http = { version = "0" }
tower-layer = { version = "0" }
tower-service = { version = "0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-opentelemetry = "0"
tracing-logstash = "0.4"
opentelemetry = "0"
opentelemetry-prometheus = "0"
prometheus = "0.13"
pin-project = "1"
time = { version = "0.3", default-features = false, features = [ "std", "formatting" ] }
