[package]
name = "mini-web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
axum = { version = "0", features = ["headers"] }
anyhow = "1"
tower-http = { version = "0", features = ["catch-panic", "propagate-header"] }
tower-layer = { version = "0" }
tower-service = { version = "0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-opentelemetry = "0"
tracing-logstash = "0.4"
opentelemetry = { version = "0.18", features = ["metrics"] } # Keep in sync with `tracing-opentelemetry`
opentelemetry-prometheus = { version = "0.11" } # Keep in sync with `tracing-opentelemetry`
prometheus = "0.13" # Keep in sync with `opentelemetry-prometheus`
pin-project = "1"
time = { version = "0.3", default-features = false, features = [ "std", "formatting" ] }
rusty_ulid = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }